allah yestur push

--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -148,6 +148,116 @@
             </div>
         </div>
     </div>
+    <div class="wrap_header_mobile">
+      <!-- Logo moblie -->
+      <a href="https://www.eyemaxx.ca/" class="logo-mobile">
+      <img src="../../../../assets/img/mobile_logo.png" alt="Eyemaxx Optical Studio">
+    </a>
+    <!-- Button show menu -->
+      <div class="btn-show-menu">
+        <!-- Header Icon mobile -->
+        <div class="header-icons-mobile">
+          <a href="https://www.eyemaxx.ca/account/login" class="header-wrapicon1 dis-block">
+                <img src="../../../../assets/img/icon-header-01.png" class="header-icon1" alt="ICON">
+              </a>
+              <span class="linedivide2"></span>
+          <img src="../../../../assets/img/icon-header-02.png" class="header-icon1 js-show-header-dropdown"
+            alt="ICON">
+          <span class="header-icons-noti cart-total">0</span>
+          <!-- Header cart noti -->
+          <div class="header-cart header-dropdown">
+            <ul class="header-cart-wrapitem">
+              <li>
+                <p class="text-center cart-empty">Your shopping cart is empty!</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="btn-show-menu-mobile hamburger hamburger--squeeze">
+          <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrap-side-menu">
+      <nav class="side-menu">
+        <ul class="main-menu">
+          <li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
+            <span class="topbar-child1">
+            <p style="text-align: center; font-size:17px; color: white"><a style="text-decoration:underline; color:white" href="https://www.eyemaxx.ca/pages/our-covid-19-policies">Updated COVID Policies</a></p>
+          </span>
+          </li>
+          <li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
+            <div class="topbar-child2-mobile">
+
+              <span class="topbar-email">
+              <p style="font-size:17px; color:#888;"><a style="color:#888;" href="mailto:staff@eyemaxx.ca?subject=Questions" title="">staff@eyemaxx.ca</a> | Tel: 613.216.6076</p>
+            </span>
+            <div class="topbar-language rs1-select2">
+              <span class="selected-currency" style="display:none;">CAD</span>
+              </div>
+            </div>
+          </li>
+          <li class="item-topbar-mobile p-l-10">
+            <div class="topbar-social-mobile">
+<a href="https://www.facebook.com/eyemaxx613/" class="topbar-social-item fa fa-facebook" title="Eyemaxx Optical Studio on Facebook">
+  </a>
+<a data-toggle="tooltip" class=" topbar-social-item fa fa-twitter" data-placement="bottom" href="https://twitter.com/eyemaxx613" title="" data-original-title="Eyemaxx Optical Studio on Twitter">
+  </a>
+<a data-toggle="tooltip" class="topbar-social-item fa fa-instagram" data-placement="bottom" href="https://www.instagram.com/eyemaxx613/" title="" data-original-title="Eyemaxx Optical Studio on Instagram">
+  </a>
+</div>
+</li>
+<li class="item-menu-mobile ">
+            <a href="https://www.eyemaxx.ca/pages/book-an-eye-exam"><span style="color:#79a0df; font-size:15px; font-weight:800">Book An Appointment</span></a>
+            <ul class="sub-menu">
+              <li><a class="" href="https://www.eyemaxx.ca/pages/book-an-eye-exam">Book an Eye Exam</a></li>
+              <li><a class="" href="https://www.eyemaxx.ca/pages/book-an-optical-appointment">Book an Optical Service</a></li>
+            </ul>
+            <i class="arrow-main-menu fa fa-angle-right" aria-hidden="true"></i>
+          </li>
+          <li class="item-menu-mobile ">
+            <a href="https://www.eyemaxx.ca/pages/ourteam">About Us</a>
+            <ul class="sub-menu">
+              <li><a class="" href="https://www.eyemaxx.ca/pages/ourteam">Team</a></li>
+              <li><a class="" href="https://www.eyemaxx.ca/pages/optometrists">Eye doctors</a></li>
+            </ul>
+            <i class="arrow-main-menu fa fa-angle-right" aria-hidden="true"></i>
+          </li>
+          <li class="item-menu-mobile ">
+            <a href="https://www.eyemaxx.ca/pages/our-services">Services</a>
+            <ul class="sub-menu">
+              <li><a class="" href="https://www.eyemaxx.ca/pages/our-services">Eye Exams &amp; Vision Tests</a></li>
+              <li><a class="" href="https://www.eyemaxx.ca/pages/contact-lenses-and-fitting">Contact Lenses &amp; Fitting</a></li>
+              <li><a class="" href="https://www.eyemaxx.ca/pages/optical-services">Optical Services</a></li>
+              <li><a class="" href="https://www.eyemaxx.ca/pages/our-covid-19-policies">Our COVID Policies</a></li>
+            </ul>
+            <i class="arrow-main-menu fa fa-angle-right" aria-hidden="true"></i>
+          </li>
+          <li class="item-menu-mobile ">
+            <a href="https://www.eyemaxx.ca/pages/our-brands">Products</a>
+            <ul class="sub-menu">
+              <li><a class="" href="https://www.eyemaxx.ca/pages/lenses-brands">Lenses</a></li>
+              <li><a class="" href="https://www.eyemaxx.ca/pages/frames">Frames</a></li>
+              <li><a class="" href="https://www.eyemaxx.ca/pages/contact-lenses-and-fitting">Contact Lenses</a></li>
+            </ul>
+            <i class="arrow-main-menu fa fa-angle-right" aria-hidden="true"></i>
+          </li> <li class="item-menu-mobile ">
+            <a href="https://www.eyemaxx.ca/blogs/ive-been-framed">Blog</a>
+          </li>
+          <li class="item-menu-mobile ">
+            <a href="https://www.eyemaxx.ca/pages/contact-us">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+  <div class="breadcrumbs">
+    <div class="container"></div>
+  </div>
+
 </div>
 
 <div class="container">
