--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -358,7 +358,7 @@
     </p>
     <ng-template pTemplate="footer">
         <button pButton type="button" icon="pi pi-check" (click)="popUpNavigation('appointment')"
-            label="Book another appointment" class="p-button-raised bookbutton"  ></button>
+            label="Book Again" class="p-button-raised bookbutton"  ></button>
         <button pButton pRipple type="button" icon="pi pi-home" (click)="popUpNavigation('home')" label="Go to home"
             class="p-button-secondary homebutton">
         </button>
