last push to hamezeh

--- a/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
+++ b/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
@@ -17,31 +17,40 @@
             </div>
         </div>
         <br>
-        <div class="col-md-4 text-left">
-            <p><strong>First Name: </strong>{{appointmentConfirmationData.SelectedUser.firstName}}</p>
-            <p><strong>Last Name: </strong>{{appointmentConfirmationData.SelectedUser.lastName}}</p>
-            <p><strong>Street Number: </strong>{{appointmentConfirmationData.SelectedUser.streetNumber}}</p>
-            <p><strong>Unit Number: </strong>{{appointmentConfirmationData.SelectedUser.unit}}</p>
-            <p><strong>Street Name: </strong>{{appointmentConfirmationData.SelectedUser.streetName}}</p>
-            <p><strong>City: </strong>{{appointmentConfirmationData.SelectedUser.city}}</p>
-        </div>
-        <div class="col-md-4 text-left">
-            <p><strong>Province: </strong>{{appointmentConfirmationData.SelectedUser.province}}</p>
-            <p><strong>Postal Code: </strong> {{appointmentConfirmationData.SelectedUser.postalCode}}</p>
-            <p><strong>Date of Birth: </strong>{{appointmentConfirmationData.SelectedUser.dateOfBirth}}</p>
-            <p><strong>Cell Phone: </strong>{{appointmentConfirmationData.SelectedUser.cell}}</p>
-            <p><strong>Email: </strong>{{appointmentConfirmationData.SelectedUser.email}}</p>
-            <p><strong>Health Card & Expiry: </strong>{{appointmentConfirmationData.SelectedUser.medicalCardExp}}</p>
-        </div>
-        <div class="col-md-4 text-left">
-            <p><strong>Insurance Company: </strong> {{appointmentConfirmationData.SelectedUser.medicalCard}}</p>
-            <p><strong>Optometrist: </strong>{{ this.appointmentTypeData.isOptomitrist ?
-                this.appointmentTypeData.Staff.id > -1 ? appointmentTypeData.Staff.firstName + '
-                '+appointmentTypeData.Staff.lastName:'Any Optometrist':appointmentTypeData.ExamType.name }}</p>
-            <p><strong>Exam Type: </strong>{{appointmentTypeData.ExamType.name}}</p>
-            <p><strong>Appointment Date & Time: </strong>{{appointmentSlotData.SelectedDate | date:'mediumDate'}}
-                {{appointmentSlotData.SelectedTimeSlot.start}} - {{appointmentSlotData.SelectedTimeSlot.end}}</p>
+        <div class="container">
+            <div class="col-md-2">
 
+            </div>
+            <div class="col-md-3 text-left">
+                <p><strong>First Name: </strong>{{appointmentConfirmationData.SelectedUser.firstName}}</p>
+                <p><strong>Last Name: </strong>{{appointmentConfirmationData.SelectedUser.lastName}}</p>
+                <p><strong>Street Number: </strong>{{appointmentConfirmationData.SelectedUser.streetNumber}}</p>
+                <p><strong>Unit Number: </strong>{{appointmentConfirmationData.SelectedUser.unit}}</p>
+                <p><strong>Street Name: </strong>{{appointmentConfirmationData.SelectedUser.streetName}}</p>
+                <p><strong>City: </strong>{{appointmentConfirmationData.SelectedUser.city}}</p>
+            </div>
+            <div class="col-md-3 text-left">
+                <p><strong>Province: </strong>{{appointmentConfirmationData.SelectedUser.province}}</p>
+                <p><strong>Postal Code: </strong> {{appointmentConfirmationData.SelectedUser.postalCode}}</p>
+                <p><strong>Date of Birth: </strong>{{appointmentConfirmationData.SelectedUser.dateOfBirth}}</p>
+                <p><strong>Cell Phone: </strong>{{appointmentConfirmationData.SelectedUser.cell}}</p>
+                <p><strong>Email: </strong>{{appointmentConfirmationData.SelectedUser.email}}</p>
+                <p><strong>Health Card & Expiry: </strong>{{appointmentConfirmationData.SelectedUser.medicalCardExp}}
+                </p>
+            </div>
+            <div class="col-md-3 text-left">
+                <p><strong>Insurance Company: </strong> {{appointmentConfirmationData.SelectedUser.medicalCard}}</p>
+                <p><strong>Optometrist: </strong>{{ this.appointmentTypeData.isOptomitrist ?
+                    this.appointmentTypeData.Staff.id > -1 ? appointmentTypeData.Staff.firstName + '
+                    '+appointmentTypeData.Staff.lastName:'Any Optometrist':appointmentTypeData.ExamType.name }}</p>
+                <p><strong>Exam Type: </strong>{{appointmentTypeData.ExamType.name}}</p>
+                <p><strong>Appointment Date & Time: </strong>{{appointmentSlotData.SelectedDate | date:'mediumDate'}}
+                    {{appointmentSlotData.SelectedTimeSlot.start}} - {{appointmentSlotData.SelectedTimeSlot.end}}</p>
+
+            </div>
+            <div class="col-md-2">
+
+            </div>
         </div>
     </div>
 
