push to hamezeh

--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -42,8 +42,8 @@
         <div class="topbar-child2">
             <span class="topbar-email">
                 <p style="font-size:17px; color:#888;"><a style="color:#888;"
-                        href="mailto:staff@eyemaxx.ca?subject=Questions" title="">staff@eyemaxx.ca</a> | Tel:
-                    613.216.6076</p>
+                        href="mailto:staff@eyemaxx.ca?subject=Questions" title="">staff@eyemaxx.ca</a> </p>
+                <p> <a href="tel:613-216-6076">613.216.6076</a></p>
             </span>
             <div class="topbar-language rs1-select2">
                 <span class="selected-currency" style="display:none;">CAD</span>
@@ -370,13 +370,15 @@
                 </h4>
                 <div>
                     <p class="s-text7 w-size27">
-                        <img style="width:200px; margin-bottom:20px;" src="../../../../assets/img/saved_resource">
+                        <img style="width:200px; margin-bottom:20px;" src="../../../../assets/img/saved_resource.png">
                         <br>
                         <strong style="font-size:16px; font-family:'poppins-black'; font-weight:800">GET IN
                             TOUCH</strong><br>
                         <a style="color:#333;" href="mailto:staff@eyemaxx.ca?subject=Questions"
                             title="">staff@eyemaxx.ca</a> <br>
-                        Tel: 613.216.6076
+                        <a style="color:#333;" href="tel:613.216.6076">
+                            Tel: 613.216.6076
+                        </a>
                     </p>
                     <div class="footer__social-icons flex-m p-t-30">
 
