material select issue

--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -11,63 +11,63 @@
                 <label class="control-label">Exam Type</label><br>
                 <mat-form-field appearance="fill" style="width: 80%; margin-left: 4%;margin-right:4%;">
                     <mat-label>Click here to select the exam type</mat-label>
-                    <mat-select [(ngModel)]="SelectedExamId" (selectionChange)="SelectExam()">
+                    <mat-select [(ngModel)]="SelectedExamId" (selectionChange)="SelectExam()" [disabled]="isExamTypeSelectDisabled">
                         <mat-option *ngFor="let type of DoctorStoreTypeData.AppointmentTypes" [value]="type.id">{{
                             type.name }}
                         </mat-option>
 
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Contact Lens Fitting: Multifocal or Monovision
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Contact Lens Fitting: Single Vision
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Contact Lens Teach: Multifocal or Monovision
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Contact Lens Teach: Single Vision
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Forms
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Laser Post-op
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             NIHB (Non-Insured Health Benefits)
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             No Charge CL Follow Up
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             No Charge Rx Check
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Partial Eye Exam
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Retinal Images
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Visual Field
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             OHIP: Partial (V408A)
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             OHIP: Visual Fields (V410A)
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             OHIP: ODSP (V450A)
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             OHIP: Ontario Works (V451A)
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Optical: Sales Rep
                         </mat-option>
-                        <mat-option [value]="'-2'">
+                        <mat-option [value]="-2">
                             Optical: Troubleshooting
                         </mat-option>
                     </mat-select>
@@ -75,7 +75,7 @@
                 <div *ngIf="ExamErrorMessage">
                     <mat-error>This type of exam can not be booked online,
                         Please select another type or call our
-                        store to book an appointment.</mat-error>
+                        store to book an appointment.<a href="tel:613-216-6076">Tel:613.216.6076</a></mat-error>
                 </div>
                 <!-- <div class="form-group label-floating" style="margin-left: 4%; margin-right: 4%;">
                     <label class="control-label">Exam Type</label>
