--- a/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
+++ b/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
@@ -9,7 +9,7 @@
             <div class="col-md-6" *ngIf="appointmentTypeData.isOptomitrist">
                 <mat-checkbox [(ngModel)]="OpticianAppointment" (change)="onOpticianAppointmentChange()"
                     [color]="'primary'" style="margin-left: 3%;margin-right: 3%;">
-                    <h4>I would like an appointment to shop for glasses.</h4>
+                    <h4>Yes, I would like to request an appointment to shop for glasses.</h4>
                 </mat-checkbox>
             </div>
             <div class="col-md-3">
