--- a/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
+++ b/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
@@ -84,11 +84,11 @@
         <div class="col-sm-4"></div>
 
     </div>
-    <div class="row text-center">
+    <!-- <div class="row text-center">
         <button type="button" (click)="ShowPatientFormToEdit()" class="btn btn-secondary"
             *ngIf="SelectedUser.id!='-1'">Edit
             Selected User</button>
-    </div>
+    </div> -->
 
 
     <div class="row">
