text updates done

--- a/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
+++ b/src/app/online-booking-module/components/appointmentconfirmation/appointmentconfirmation.component.html
@@ -1,7 +1,7 @@
 <div class="tab-pane" id="confirm">
     <div class="row">
-        <h4 class="info-text">Your Information</h4>
-        <h4 class="info-text">Please enter your email to confirm your appointment</h4>
+        <h4 class="info-text">Patient Information</h4>
+        <h4 class="info-text">Please enter your email to confirm the appointment</h4>
         <h4 *ngIf="UserNotFound" class="info-text" style="color: red;">This entered email address does not exist in our
             database,
             please create new account</h4>
@@ -68,7 +68,7 @@
                     <div class="icon">
                         <i class="material-icons">person_add</i>
                     </div>
-                    <h6>New Account</h6>
+                    <h6>New Patient</h6>
                 </div>
             </div>
 
