--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -302,7 +302,7 @@
                                         Appointment)</a></li> -->
                         <li id="step6" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a href="#confirm"
                                 data-toggle="tab">Step 4 :
-                                Your Information</a></li>
+                                Patient Information</a></li>
                         <li id="step7" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a href="#summary"
                                 data-toggle="tab">Step 5 :
                                 Summary</a></li>
